--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="breaking_news">Breaking News</string>
     <string name="saved_news">Saved News</string>
     <string name="search_news">Search News</string>
+    <string name="article_saved">Article Saved</string>
+    <string name="article_deleted">Article Deleted</string>
+    <string name="undo_delete_action">Undo</string>
 </resources>
